components/gatewayapi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway-api-system
  hostnames:
    - "argocd.example.com"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
